fixed playlist content overflow for mobile

--- a/say-it-client/src/App.css
+++ b/say-it-client/src/App.css
@@ -86,6 +86,8 @@ textarea:focus, input[type=text]:focus {
   display: flex;
   flex-direction: column;
   flex:1;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .panel {
